--- a/web/引导页面.html
+++ b/web/引导页面.html
@@ -56,7 +56,7 @@
         </p>
     </div>
     <div>       <!--选择-->
-        <a href="../web/index.html" >我接受</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="/index.html" >我接受</a>&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="" >我拒绝</a>
     </div>
     <div>       <!--作者信息-->
