--- a/web/引导页面.html
+++ b/web/引导页面.html
@@ -56,8 +56,8 @@
         </p>
     </div>
     <div>       <!--选择-->
-        <a href="/index.html" >我接受</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="" >我拒绝</a>
+        <a href="index.html" >我接受</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://thedamonjester.github.io/424/" >我拒绝</a>
     </div>
     <div>       <!--作者信息-->
        <h3> copyright: U202315370计卓2301班陈墨涵</h3>
