--- a/web/更多.html
+++ b/web/更多.html
@@ -133,7 +133,7 @@
     <li><a href="../web/阅读.html" class="con"> two <span class="con-box"><span class="cont">返回阅读</span><span class="back">阅读</span></span> </a></li>
     <li><a href="../web/索引.html" class="con"> tree <span class="con-box"><span class="cont">返回索引</span><span class="back">索引</span></span> </a></li>    
 	<li><a href="../web/引导页面.html" class="con"> free <span class="con-box"><span class="cont">梦开始的地方</span><span class="back">《山海经》</span></span> </a></li>
-	<li><a href="" class="con"> free <span class="con-box"><span class="cont">看完了</span><span class="back">返回寝室页面</span></span> </a></li>
+	<li><a href="https://thedamonjester.github.io/424/" class="con"> free <span class="con-box"><span class="cont">看完了</span><span class="back">返回寝室页面</span></span> </a></li>
 </ul>
 </div>
 <div class="flip-3d">
