--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <br><button class="btn"> <a href="web/更多.html">图鉴</a></button><br>
             <h1>返回</h1>
             <button class="btn"><a href="web/引导页面.html">返回初始页面</a></button>
-            <button class="btn"><a href="">返回寝室页面</a></button>
+            <button class="btn"><a href="https://thedamonjester.github.io/424/">返回寝室页面</a></button>
   <div>       <!--作者信息-->
     <h3> copyright: U202315370计卓2301班陈墨涵</h3>
  </div>
