--- a/web/更多.html
+++ b/web/更多.html
@@ -128,7 +128,7 @@
 	
 <div>	
  <ul class="nav">
-    <li><a href="index.html" class="con"> odddd <span class="con-box"><span class="cont">返回主页面</span><span class="back">《山海》异志</span>
+    <li><a href="../index.html" class="con"> odddd <span class="con-box"><span class="cont">返回主页面</span><span class="back">《山海》异志</span>
     </span> </a></li>
     <li><a href="../web/阅读.html" class="con"> two <span class="con-box"><span class="cont">返回阅读</span><span class="back">阅读</span></span> </a></li>
     <li><a href="../web/索引.html" class="con"> tree <span class="con-box"><span class="cont">返回索引</span><span class="back">索引</span></span> </a></li>    
