--- a/web/索引.html
+++ b/web/索引.html
@@ -1062,7 +1062,7 @@
     </div>
     <div>
         <a href="#top">回顶部</a>
-        <a href="../web/index.html">回主页</a>
+        <a href="../index.html">回主页</a>
     </div>
     </div>
 </body>
