--- a/web/阅读.html
+++ b/web/阅读.html
@@ -37,6 +37,7 @@
         .menu{
             position: fixed;
             right:10% ;
+            display: block;
         }
         iframe{
             background-image: url(../image/文字背景图.jpg);
@@ -212,7 +213,7 @@
         <iframe src="../web/《山海经》/译文/《海内经》译文.html"></iframe>
     </div>
     <div class="menu">
-        <a href="../web/index.html" class="btn">回主页</a>
+        <a href="../index.html" class="btn">回主页</a>
         <br><br><br><br>
         <a href="#" class="btn">回顶部</a>
     </div>
