--- a/web/阅读.html
+++ b/web/阅读.html
@@ -212,9 +212,8 @@
         <h1 >译文</h1>
         <iframe src="../web/《山海经》/译文/《海内经》译文.html"></iframe>
     </div>
-    <div class="menu">
+    <div >
         <a href="../index.html" class="btn">回主页</a>
-        <br><br><br><br>
         <a href="#" class="btn">回顶部</a>
     </div>
     <div>       <!--作者信息-->
